grammar.js
    node: ($) => $._any_expression,

    // ---------- Overrides ----------
    _any_expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.assignment_expression,
        $.expression,
        $.ternary_expression,
        $.nullish_coalescing_expression,
        $.regular_expression,
        prec(3, $.conditional_expression),
      ),

    regular_expression: ($) =>
      seq(
        '/',
        field('pattern', $.regular_expression_pattern),
        token.immediate(prec(1, '/')),
        optional(field('flags', $.regular_expression_flags)),
        optional(seq('.', $.call_expression)),
      ),

    regular_expression_pattern: (_) =>
      token.immediate(
        prec(
          -1,
          repeat1(
            choice(
              seq(
                '[',
                repeat(
                  choice(
                    /\\./, // escaped character
                    /[^\]\n\\]/, // any character besides ']', '\' or '\n'
                  ),
                ),
                ']',
              ),
              /\\./, // escaped character
              /[^/\\\[\n]/, // any character besides '[', '\', '/', '\n'
            ),
          ),
        ),
      ),

    regular_expression_flags: () => token.immediate(/[dgimsuvy]+/),

    template_string: ($) =>
      seq(
        $._backtick,
        repeat(choice($.template_chars, $.template_substitution)),
        $._backtick,
      ),

    template_chars: (_) => token.immediate(prec(1, /(?:[^$`\\]+|\\.)+/)),

    template_substitution: ($) => seq('${', $._any_expression, '}'),

    // Expression
    expression: ($) => seq($._primitive, optional(field('pipes', $.pipe_sequence))),

    // Unary expression
    binary_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('left', $.expression),
          field('operator', $._binary_op),
          field('right', choice($.binary_expression, $.expression)),
        ),
      ),

    // Ternary expression
    ternary_expression: ($) =>
      prec.right(
        PREC.CALL,
        seq(
          field('condition', $._any_expression),
          alias('?', $.ternary_operator),
          field('consequence', choice($.group, $._primitive, $._short_concat_expression)),
          alias(':', $.ternary_operator),
          field('alternative', choice($.group, $._any_expression)),
        ),
      ),

    _short_concat_expression: ($) => seq($._primitive, '+', $._primitive),

    // Nullish coalescing expression
    pipe_sequence: ($) => repeat1(seq(alias('|', $.pipe_operator), $.pipe_call)),

    pipe_call: ($) =>
      seq(field('name', $.identifier), optional(field('arguments', $.pipe_arguments))),

    pipe_arguments: ($) => repeat1($._pipe_argument),
    _pipe_argument: ($) => seq(':', $._primitive),

    // ---------- Primitives ----------
    _primitive: ($) =>
      choice(
        $.object,
        $.array,
        prec(PREC.CALL, $.identifier),
        $.string,
        $.template_string,
        $.number,
        $.group,
        $.call_expression,
        $.member_expression,
        $.bracket_expression,
      ),

    // Object
    identifier: () => /[-a-zA-Z_\$][-a-zA-Z0-9_\$]*/,

    // String
    string: ($) =>
      choice(
        seq(
          $._double_quote,
          repeat(choice(token.immediate(/[^"]/), $._escape_sequence)),
          $._double_quote,
        ),
        seq(
          $._single_quote,
          repeat(choice(token.immediate(/[^']/), $._escape_sequence)),
          $._single_quote,
        ),
      ),

    _escape_sequence: (_) =>
      token.immediate(
        seq(
          '\\',
          choice(
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u\{[0-9a-fA-F]+\}/,
            /[\r?][\n\u2028\u2029]/,
          ),
        ),
      ),

    // Number
    number: () => /[0-9]+\.?[0-9]*/,

    // Group
    group: ($) => seq('(', $._any_expression, ')'),

    // Call expression
    call_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('function', $._primitive),
          optional(choice('?.', '!')),
          '(',
          optional(field('arguments', $.arguments)),
          ')',
        ),
      ),
    arguments: ($) =>
      seq(
        choice($._primitive, $.binary_expression, $.unary_expression, $._timed_argument),
        repeat(seq(',', $._primitive)),
      ),

    _timed_argument: ($) => seq($.number, $.unit),

    // Member expression
    member_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('object', $._primitive),
          choice(
            seq(
              choice('.', '?.', '!.'),
              choice(
                field('property', $.identifier),
                field('unit', $.style_unit),
              ),
            ),
          ),
        ),
      ),

    bracket_expression: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field('object', $._primitive),
          optional(choice('.', '?.', '!.')),
          '[',
          field('property', $._any_expression),
          ']',
        ),
      ),

    // ---------- Base ----------
    _backtick: () => '`',
    // eslint-disable-next-line quotes
    _single_quote: () => "'",
    _double_quote: () => '"',
    _binary_op: () =>
      choice(
        '+',
        '-',
        '/',
        '*',
        '**',
        '%',
        '==',
        '===',
        '!=',
        '!==',
        '&&',
        '||',
        '<',
        '<=',
        '>',
        'in',
        '>=',
        '+=',
        '-=',
        '*=',
        '/=',
        '%=',
        '**=',
        '<<=',
        '>>=',
        '>>>=',
        '&=',
        '^=',
        '|=',
        '&&=',
        '||=',
        '??=',
      ),
  },
});
