test/corpus/assignments.txt
========================
Binary assignment - +=
========================

10 += 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - -=
========================

10 -= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - *=
========================

10 *= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - /=
========================

10 += 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - %=
========================

10 %= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - &=
========================

10 &= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - ^=
========================

10 ^= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - |=
========================

10 |= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - **=
========================

10 **= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - <<=
========================

10 <<= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - >>=
========================

10 >>= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - ||=
========================

10 ||= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - &&=
========================

10 &&= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - ??=
========================

10 ??= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
Binary assignment - >>>=
========================

10 >>>= 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))
