test/corpus/interpolation.txt
=====
Basic
=====

value

---

(node
  (expression
    (identifier)))

==========
With pipes
==========

value | pipe

---

(node
  (expression
    (identifier)
    (pipe_sequence
      (pipe_operator)
      (pipe_call
        (identifier)))))

===================
Pipe with arguments
===================

value | pipe:arg1:arg2

---

(node
  (expression
    (identifier)
    (pipe_sequence
      (pipe_operator)
      (pipe_call
        (identifier)
        (pipe_arguments
          (identifier)
          (identifier))))))

======================
Conditional expression
======================

authenticated ? "Logged In" : "Logged Out"

---

(node
  (ternary_expression
    (expression
      (identifier))
    (ternary_operator)
    (string)
    (ternary_operator)
    (expression
      (string))))

======================
Conditional with pipes
======================

isNew ? ('entity.new' | translate) : data.entity?.name

---

(node
  (ternary_expression
    (expression
      (identifier))
    (ternary_operator)
    (group
      (expression
        (string)
        (pipe_sequence
          (pipe_operator)
          (pipe_call
            (identifier)))))
    (ternary_operator)
    (expression
      (member_expression
        (member_expression
          (identifier)
          (identifier))
        (identifier)))))

========
Grouping
========

((recipe$ | async)?.name) + ' update'

---

(node
  (binary_expression
    (expression
      (group
        (expression
          (member_expression
            (group
              (expression
                (identifier)
                (pipe_sequence
                  (pipe_operator)
                  (pipe_call
                    (identifier)))))
            (identifier)))))
    (expression
      (string))))

====================
String concatenation
====================

'Hello ' + firstName + ', how are you?'

---

(node
  (binary_expression
    (expression
      (string))
    (binary_expression
      (expression
        (identifier))
      (expression
        (string)))))

========================
String concat with pipes
========================

'languages.' + translateService.getActiveLang() | transloco

---

(node
  (binary_expression
    left: (expression
      (string))
    right: (expression
      (call_expression
        function: (member_expression
          object: (identifier)
          property: (identifier)))
      pipes: (pipe_sequence
        (pipe_operator)
        (pipe_call
          name: (identifier))))))

========================
Exponentiation
========================

10 ** 3

---

(node
  (binary_expression
    (expression
      (number))
    (expression
      (number))))

========================
String concat with ternary
========================

obj.member + (obj.list.length < 0 ? ', ' + obj.field : '')

---

(node
  (binary_expression
    left: (expression
      (member_expression
        object: (identifier)
        property: (identifier)))
    right: (expression
      (group
        (ternary_expression
          condition: (binary_expression
            left: (expression
              (member_expression
                object: (member_expression
                  object: (identifier)
                  property: (identifier))
                property: (identifier)))
            right: (expression
              (number)))
          (ternary_operator)
          consequence: (string)
          consequence: (member_expression
            object: (identifier)
            property: (identifier))
          (ternary_operator)
          alternative: (expression
            (string)))))))
