test/corpus/regular-expressions.txt
===========
Basic regexp
===========

/\d+/

---

(node
  (regular_expression
    pattern: (regular_expression_pattern)))

===========
Complex regexp
===========

/^[^a-z][0-9]*?\d+$/

---

(node
  (regular_expression
    pattern: (regular_expression_pattern)))

===========
Basic regexp with flags
===========

/\d+/gi

---

(node
  (regular_expression
    pattern: (regular_expression_pattern)
    flags: (regular_expression_flags)))

===========
Regexp with test call
===========

/\d+/gi.test(value)

---

(node
  (regular_expression
    pattern: (regular_expression_pattern)
    flags: (regular_expression_flags)
    (call_expression
      function: (identifier)
      arguments: (arguments
        (identifier)))))
