test/corpus/template-literal.txt
=========================
Untagged template literal
=========================

`w-${width()}`

---

(node
  (expression
    (template_string
      (template_chars)
      (template_substitution
        (expression
          (call_expression
            (identifier)))))))

=========================
Untagged template literal - only substitution
=========================

`${width()}`

---

(node
  (expression
    (template_string
      (template_substitution
        (expression
          (call_expression
            (identifier)))))))

=========================
Untagged template literal - multiple
=========================

`col-${width()} bg-${color()}`

---

(node
  (expression
    (template_string
      (template_chars)
      (template_substitution
        (expression
          (call_expression
            (identifier))))
      (template_chars)
      (template_substitution
        (expression
          (call_expression
            (identifier)))))))

=========================
Untagged template literal - complex
=========================

`col-${width | async}`

---

(node
  (expression
    (template_string
      (template_chars)
      (template_substitution
        (expression
          (identifier)
          (pipe_sequence
            (pipe_operator)
            (pipe_call
              (identifier))))))))

=========================
Untagged template literal - interpolation
=========================

`string with a value: ${prop()}`

---

(node
  (expression
    (template_string
      (template_chars)
      (template_substitution
        (expression
          (call_expression
            (identifier)))))))

========================
Untagged template literal - interpolation with pipe
========================

`Hello, ${name}` | uperrcase

---

(node
  (expression
    (template_string
      (template_chars)
      (template_substitution
        (expression
          (identifier))))
    (pipe_sequence
      (pipe_operator)
      (pipe_call
        (identifier)))))
